infra/k8s/auth-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: auth-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth

  template:
    metadata:
      labels:
        app: auth

    spec:
      containers:
        - name: auth

          image: callipygious/microstore-auth
