infra/k8s/auth-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: auth-service

spec:
  type: ClusterIP
  
  selector:
    app: auth


  ports:
    - name: auth

      protocol: TCP

      port: 1111

      targetPort: 1111
