infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ingress-service

  annotations:
    kubernetes.io/ingress.class: nginx

    nginx.ingress.kubernetes.io/use-regex: 'true'

spec:
  rules:
    - http:
        paths:
          - path: /api/users/?(.*)

            backend:
              serviceName: auth-service

              servicePort: 1111


          - path: /api/tickets/?(.*)

            backend:
              serviceName: tickets-service

              servicePort: 2222


          - path: /?(.*)

            backend:
              serviceName: client-service

              servicePort: 3333
